--- a/sample/style.css
+++ b/sample/style.css
@@ -354,6 +354,7 @@
             height: auto;
             display: block;
             min-height: 200px;
+            max-height: 50%;
             opacity: 0;
             transition: opacity 0.5s ease;
         }
