--- a/sample/style.css
+++ b/sample/style.css
@@ -350,11 +350,13 @@
         }
 
         .feature-image img {
-            width: 100%;
+            max-width: 100%;
+            max-height: 50vh;
+            width: auto;
             height: auto;
+            margin: 0 auto;
             display: block;
             min-height: 200px;
-            max-height: 50%;
             opacity: 0;
             transition: opacity 0.5s ease;
         }
